// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Proposal Form render correctly 1`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Proposal Code
      </p>
      <InputField
        className="proposal-code-input"
        name="proposalCode"
        onChange={[Function]}
        value=""
      />
    </styled.div>
    <styled.div>
      <p>
        Principal investigator
      </p>
      <InputField
        className="principal-investigator-input"
        error=""
        name="principalInvestigator"
        onChange={[Function]}
        value=""
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Proposal title
      </p>
      <InputField
        className="proposal-title-input"
        name="proposalTitle"
        onChange={[Function]}
        value=""
      />
    </styled.div>
    <styled.div>
      <p>
        Observation night
      </p>
      <InputField
        className="observation-night-input"
        name="observationNight"
        onChange={[Function]}
        value=""
      />
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`Proposal Form render correctly 2`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Proposal Code
      </p>
      <InputField
        className="proposal-code-input"
        name="proposalCode"
        onChange={[Function]}
        value=""
      />
    </styled.div>
    <styled.div>
      <p>
        Principal investigator
      </p>
      <InputField
        className="principal-investigator-input"
        error=""
        name="principalInvestigator"
        onChange={[Function]}
        value=""
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Proposal title
      </p>
      <InputField
        className="proposal-title-input"
        name="proposalTitle"
        onChange={[Function]}
        value="hello"
      />
    </styled.div>
    <styled.div>
      <p>
        Observation night
      </p>
      <InputField
        className="observation-night-input"
        name="observationNight"
        onChange={[Function]}
        value=""
      />
    </styled.div>
  </styled.div>
</Fragment>
`;

exports[`Proposal Form render correctly 3`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Proposal Code
      </p>
      <InputField
        className="proposal-code-input"
        error="this is an error"
        name="proposalCode"
        onChange={[Function]}
        value="Code1"
      />
    </styled.div>
    <styled.div>
      <p>
        Principal investigator
      </p>
      <InputField
        className="principal-investigator-input"
        error="this is an error"
        name="principalInvestigator"
        onChange={[Function]}
        value=""
      />
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <p>
        Proposal title
      </p>
      <InputField
        className="proposal-title-input"
        error="this is an error"
        name="proposalTitle"
        onChange={[Function]}
        value=""
      />
    </styled.div>
    <styled.div>
      <p>
        Observation night
      </p>
      <InputField
        className="observation-night-input"
        name="observationNight"
        onChange={[Function]}
        value=""
      />
    </styled.div>
  </styled.div>
</Fragment>
`;
